--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,12 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "hamburger-react": "^2.5.0",
-    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-quilljs": "^1.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
